# vkmsctl

./: .editorconfig  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md
src/: args_parser.rs  builder.rs  create.rs  lib.rs  logger.rs  main.rs
tests/: dev1.json  valid-config.json
tests/mocks/vkms/dev1/connectors/connector2/possible_encoders/: encoder0
tests/mocks/vkms/dev1/connectors/connector3/possible_encoders/: encoder1
tests/mocks/vkms/dev1/planes/overlay0/possible_crtcs/: crtc0
tests/mocks/vkms/dev1/planes/overlay1/possible_crtcs/: crtc1
